--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
                 <a
                   id="download"
                   href="https://github.com/MikeMoolenaar/MkvDefaultTrackChanger/releases/download/V1.2.0/MkvDefaultTrackChanger-Windows-V1.2.0.zip"
-                  class="button leading-10 mt-8 max-w-fit block h-12 items-center justify-center rounded-md bg-[#9b59b6] px-10 text-sm font-medium text-primary-foreground shadow transition-colors hover:bg-[#8e44ad] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
+                  class="button mt-8 max-w-fit block h-12 items-center justify-center rounded-md bg-[#9b59b6] px-10 text-sm font-medium text-primary-foreground shadow transition-colors hover:bg-[#8e44ad] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50" style="line-height: 2.7rem"
                 >
                   Download for Windows
                 </a>
