--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="preload">
-  <title>MkvDefaultTrackSwitcher</title>
+  <title>MkvDefaultTrackChanger</title>
 </head>
 <body>
 <div>
@@ -19,7 +19,7 @@
       <div class="grid gap-4 lg:grid-cols-[1fr_450px] lg:gap-8 xl:grid-cols-[1fr_500px]">
         <div class="flex flex-col justify-center space-y-4">
           <div class="justify-center flex flex-col">
-            <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl">MkvDefaultTrackSwitcher</h1>
+            <h1 class="text-3xl font-bold tracking-tighter sm:text-5xl">MkvDefaultTrackChanger</h1>
             <p class="mt-2 max-w-[500px] md:text-lg/relaxed lg:text-base/relaxed xl:text-lg/relaxed">
               A simple open-source tool to automatically set the default audio and subtitle tracks in MKV video files.
             </p>
@@ -84,7 +84,7 @@
               d="M349.4 44.6c5.9-13.7 1.5-29.7-10.6-38.5s-28.6-8-39.9 1.8l-256 224c-10 8.8-13.6 22.9-8.9 35.3S50.7 288 64 288l111.5 0L98.6 467.4c-5.9 13.7-1.5 29.7 10.6 38.5s28.6 8 39.9-1.8l256-224c10-8.8 13.6-22.9 8.9-35.3s-16.6-20.7-30-20.7l-111.5 0L349.4 44.6z"/>
           </svg>
           <h3 class="text-lg font-semibold">Fast</h3>
-          <p class="text-muted-foreground">Great performance because it doesn't need to process the whole file.</p>
+          <p class="text-muted-foreground">Great performance because it doesn't need to process the whole file</p>
         </div>
       </div>
     </div>
