--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Small application to change the default subtitle and audio tracks in MKV video files.">
+  <meta name=”robots” content="index, follow">
   <link rel="stylesheet" href="output.css"/>
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="preload">
@@ -27,7 +28,7 @@
                 <a
                   id="download"
                   href="https://github.com/MikeMoolenaar/MkvDefaultTrackChanger/releases/download/V1.2.0/MkvDefaultTrackChanger-Windows-V1.2.0.zip"
-                  class="button w-fit mt-8 max-w-fit block h-12 items-center justify-center rounded-md bg-[#9b59b6] px-10 text-sm font-medium text-primary-foreground shadow transition-colors hover:bg-[#8e44ad] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50" style="line-height: 2.7rem"
+                  class="button w-fit mt-8 max-w-fit block h-12 items-center justify-center rounded-md bg-[#9b59b6] px-10 font-medium text-primary-foreground shadow transition-colors hover:bg-[#8e44ad] focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
                 >
                   Download for Windows
                 </a>
@@ -45,10 +46,11 @@
 
         </div>
         <img
-          src="./assets/Screenshot%20windows.jpg"
-          height="443"
-          width="286"
-          alt="MkvDefaultTrackSwitcher"
+          src="./assets/screenshot-windows.png"
+          height="708"
+          width="457"
+          style="max-width: 260px"
+          alt="Screenshot of the application"
           class="mx-auto overflow-hidden rounded-xl object-cover object-center lg:order-last"
         />
       </div>
