Fix content shift on website

--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,7 @@
               <a id="linkLinux" href="https://github.com/MikeMoolenaar/MkvDefaultTrackChanger/releases/download/V1.2.0/MkvDefaultTrackChanger-Linux-V1.2.0.zip" class="w-fit"> Download for Linux (GTK)</a>
               <a id="linkMac" href="https://github.com/MikeMoolenaar/MkvDefaultTrackChanger/releases/download/V1.2.0/MkvDefaultTrackChanger-MacOS-V1.2.0.zip" class="w-fit"> Download for MacOS</a>
             </div>
-            <div class="flex max-md:justify-center mt-12">
+            <div class="flex max-md:justify-center mt-12" id="githubContainer">
               <a class="github-button" href="https://github.com/MikeMoolenaar/MkvDefaultTrackChanger"
                  data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star"
                  data-size="large" data-show-count="true"
