--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Small application to change the default subtitle and audio tracks in MKV video files.">
   <meta name=”robots” content="index, follow">
+  <meta name="google-site-verification" content="utEiNXa3Fd3XxqasqEV1z0pXdTxOUO8LiB3PqZrIMnk">
   <link rel="stylesheet" href="output.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
